# skill-executor

./: .env_sample  .gitignore  Dockerfile  GEMINI.md  README.md  check_batches.py  docker-compose.yml  prd.md  tool_mcp_use.md
backend/: Dockerfile  README.md  pyproject.toml  register_test_skill.py  ruff.toml  test_code_exec.py  test_skill_with_code.py  verify_tools.py
backend/.pending_registrations/: registry.json
backend/.skill-executor-data/sessions/: 434ef0e9-d205-47a4-b45e-81171fc564c8.json  5fd659d6-0f1e-4641-b4a6-70898c7118d1.json  6ceb9554-9a2e-4163-8c82-fd9a06944559.json  9a2358a1-ad91-4d42-b7b9-dd9edde711e5.json  b6aa50c6-3d9d-4818-a87b-c6b5b647a32c.json  b6cb5577-0daf-46a5-a1cb-cebe42a70c2e.json  dd251374-a7a0-4569-96bf-7eca517b0cfc.json  e067cd32-83e7-4675-adb9-26ebcdfca3a0.json  e202af10-8a9c-4078-8caf-ca1e1130c321.json  eff77f54-7cbe-4a31-b057-9fa1db987267.json  f28a50cd-d03f-4cb9-acb9-d25e1f87a815.json  f7147bf4-0431-40ca-adeb-f389fa8cfb9c.json  fd5f8be3-d30b-42cc-8d8d-898f7cf8c5f9.json
backend/.skills/: registry.json
backend/src/: main.py
backend/src/api/: execution_router.py  registration_router.py  tools.py  websocket_schemas.py
backend/src/core/: agent_loop.py  llm_clients.py  prompt_loader.py  tools.py  vector_store.py
backend/src/models/: __init__.py  execution.py  registration.py  tool.py
backend/src/prompt/: execution.yaml  security.yaml
backend/tests/: test_batch_scanning.py  test_github_service_integration.py  test_local_fs.py  test_registry_docs.py  test_security_service.py  test_unified_deployment.py  verify_skills_lifecycle.py
(+143 files in other folders)
